# jupyter-and-dioxus

./: .gitignore  Cargo.toml  README.md  index.html  jupyter-lab.ipynb  makefile  other.html  pyproject.toml  requirements.txt
cmd/: build  preview
doc/: _quarto.yml  demo.ipynb  jupyter-lab.ipynb
src/: __init__.py  component.rs  lib.rs  style.css
