[package]
name = "jupyter-and-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
custom-elements = "0.2.1"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
dioxus-interpreter-js = "0.4.3"
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
# dioxus-interpreter-js = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd", features = ["webonly", "minimal_bindings"] }
serde = "1.0.196"
serde_json = "1.0.113"
wasm-bindgen = "0"
web-sys = { version = "0.3.67", features = ["HtmlElement", "Element", "Node"] }

# [features]
# default = []
# ssr = ["dioxus-fullstack/axum"]
# web = ["dioxus-fullstack/web"]
