[package]
name = "jupyter-and-dioxus"
license = "MIT"
homepage = "https://github.com/JJJHolscher/jupyter-and-dioxus"
repository = "https://github.com/JJJHolscher/jupyter-and-dioxus"
description = """
Port your Dioxus components to jupyter notebook output cells.
This crate contains the DioxusInElement Trait, that if implemented, should make your Dioxus components available to the `dioxus_widget` python library.
You do not _need_ to use this crate to port your components to `dioxus_widget`. It exists mostly for convenience sake and documentation.
This crate also contains an example implementation.
"""
readme = "README.md"
version = "0.0.1"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
custom-elements = "0.2.1"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
dioxus-interpreter-js = "0.4.3"
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
serde = "1.0.196"
serde_json = "1.0.113"
wasm-bindgen = "0"
web-sys = { version = "0.3.67", features = ["HtmlElement", "Element", "Node"] }

# [features]
# default = []
# ssr = ["dioxus-fullstack/axum"]
# web = ["dioxus-fullstack/web"]
